Fix top ten leaderboard on smaller screens.

--- a/app/assets/stylesheets/profile.styl
+++ b/app/assets/stylesheets/profile.styl
@@ -72,7 +72,7 @@
     display none
 
 .profile-picture
-  margin 10px
+  margin 10px 0
   text-align center
 
 .profile-followers
